<resources>
    <string name="app_name">Lu2048</string>

    <string name="header">2048</string>
    <string name="high_score">HIGH SCORE</string>
    <string name="score">SCORE</string>

    <string name="game_over">Game Over!</string>
    <string name="game_win">You Win!</string>
    <string name="game_lose">You Lose!</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="reset_high_score">重置最高分</string>
    <string name="to_reach_2048">To Reach 2048</string>
    <string name="to_reach_4096">Next Goal 4096</string>
    <string name="to_reach_8192">Next Goal 8192</string>
    <string name="to_reach_16384">Next Goal 16384</string>
    <string name="to_reach_32768">Next Goal 32768</string>
    <string name="to_reach_65536">Next Goal 65536</string>


    <string name="general_strategy">点我帮你开挂</string>
    <string name="advanced_strategy">开发者模式</string>

    <string name="auto">Auto</string>
    <string name="stop">Stop</string>
    <string name="go_on">GoOn</string>
    <string name="hint">Hint</string>
</resources>
