<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="260dp"
              android:layout_height="match_parent"
              android:layout_gravity="start"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text_brown">

        <ImageView
                android:id="@+id/user_head"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="30dp"
                android:src="@drawable/logo_2048"/>
    </LinearLayout>

    <include layout="@layout/separator"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:background="#fafafa"
            android:orientation="vertical">
        <LinearLayout
                android:id="@+id/menu_reset_high_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_item_bg_selector"
                android:clickable="true"
                android:orientation="horizontal">
            <ImageView
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:padding="5dp"
                    android:src="@drawable/reset_high_score"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/reset_high_score"
                    android:textSize="18sp"
                    android:textColor="@color/md_grey_600"/>
        </LinearLayout>

        <include layout="@layout/separator"/>

        <LinearLayout
                android:id="@+id/menu_general_strategy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_item_bg_selector"
                android:clickable="true"
                android:orientation="horizontal">
            <ImageView
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:padding="7dp"
                    android:src="@drawable/smile"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/general_strategy"
                    android:textSize="18sp"
                    android:textColor="@color/md_grey_600"/>
        </LinearLayout>

        <include layout="@layout/separator"/>

        <LinearLayout
                android:id="@+id/menu_advanced_strategy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/menu_item_bg_selector"
                android:clickable="true"
                android:orientation="horizontal">
            <ImageView
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:padding="4dp"
                    android:src="@drawable/robot"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/advanced_strategy"
                    android:textSize="18sp"
                    android:textColor="@color/md_grey_600"/>
        </LinearLayout>

        <include layout="@layout/separator"/>

    </LinearLayout>

</LinearLayout>
