<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="10dp"
            android:background="#0099cc">

        <ImageView
                android:id="@+id/menu"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_centerVertical="true"
                android:src="@drawable/menu"/>
    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:background="@color/background"
            android:orientation="vertical">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:id="@+id/layout_high_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/background_rectangle"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/high_score"
                        android:textSize="15sp"
                        android:textColor="@color/score_header"/>

                <TextView
                        android:id="@+id/high_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:gravity="center"
                        android:text="0"
                        android:textSize="22sp"
                        android:textColor="@color/score"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/layout_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/layout_high_score"
                    android:layout_toStartOf="@id/layout_high_score"
                    android:layout_marginRight="12dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/background_rectangle"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@string/score"
                        android:textSize="15sp"
                        android:textColor="@color/score_header"/>

                <TextView
                        android:id="@+id/score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:gravity="center"
                        android:text="0"
                        android:textSize="22sp"
                        android:textColor="@color/score"/>
            </LinearLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/layout_score"
                    android:layout_toStartOf="@id/layout_score"
                    android:layout_marginRight="12dp"
                    android:layout_marginEnd="12dp"
                    android:gravity="center"
                    android:text="@string/header"
                    android:textSize="50sp"
                    android:textColor="@color/header"/>
        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp">

            <ImageView
                    android:id="@+id/refresh"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:padding="6dp"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/background_rectangle"
                    android:src="@drawable/ic_refresh"
                    android:layout_alignParentRight="true"/>

            <ImageView
                    android:id="@+id/undo"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:padding="2dp"
                    android:layout_toLeftOf="@id/refresh"
                    android:layout_toStartOf="@id/refresh"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_undo"
                    android:background="@drawable/background_rectangle"/>
        </RelativeLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="12dp"
                android:gravity="center">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:id="@+id/layout_grid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_rectangle"
                        android:padding="5dp"
                        android:orientation="vertical">

                    <LinearLayout
                            android:id="@+id/row_0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <com.admin.md2048.CellView
                                android:id="@+id/cell_00"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:layout_weight="1"/>

                        <com.admin.md2048.CellView
                                android:id="@+id/cell_01"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:layout_weight="1"/>

                        <com.admin.md2048.CellView
                                android:id="@+id/cell_02"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:layout_weight="1"/>

                        <com.admin.md2048.CellView
                                android:id="@+id/cell_03"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:layout_weight="1"/>
                    </LinearLayout>

                    <LinearLayout
                            android:id="@+id/row_1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <com.admin.md2048.CellView
                                android:id="@+id/cell_10"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:layout_weight="1"/>

                        <com.admin.md2048.CellView
                                android:id="@+id/cell_11"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:layout_weight="1"/>

                        <com.admin.md2048.CellView
                                android:id="@+id/cell_12"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:layout_weight="1"/>

                        <com.admin.md2048.CellView
                                android:id="@+id/cell_13"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:layout_weight="1"/>
                    </LinearLayout>

                    <LinearLayout
                            android:id="@+id/row_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <com.admin.md2048.CellView
                                android:id="@+id/cell_20"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:layout_weight="1"/>

                        <com.admin.md2048.CellView
                                android:id="@+id/cell_21"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:layout_weight="1"/>

                        <com.admin.md2048.CellView
                                android:id="@+id/cell_22"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:layout_weight="1"/>

                        <com.admin.md2048.CellView
                                android:id="@+id/cell_23"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:layout_weight="1"/>

                    </LinearLayout>

                    <LinearLayout
                            android:id="@+id/row_3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <com.admin.md2048.CellView
                                android:id="@+id/cell_30"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:layout_weight="1"/>

                        <com.admin.md2048.CellView
                                android:id="@+id/cell_31"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:layout_weight="1"/>

                        <com.admin.md2048.CellView
                                android:id="@+id/cell_32"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:layout_weight="1"/>

                        <com.admin.md2048.CellView
                                android:id="@+id/cell_33"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:layout_weight="1"/>
                    </LinearLayout>

                </LinearLayout>

                <View
                        android:id="@+id/grid_bottom"
                        android:layout_width="match_parent"
                        android:layout_below="@id/layout_grid"
                        android:layout_height="0dp"/>

                <TextView
                        android:id="@+id/game_over"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@id/grid_bottom"
                        android:background="#66f7f7f7"
                        android:gravity="center"
                        android:text="@string/game_over"
                        android:textSize="50sp"
                        android:visibility="gone"/>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>